no processo de criação do facebook 2

--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
 
 <header>
     <div id="menu"><ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Sobre Mim</a></li>
-    <li><a href="#">Objetivo</a></li>
+    <li><a href="#">home</a></li>
+    <li><a href="#">sobre mim</a></li>
+    <li><a href="#">objetivo</a></li>
     </ul></div>
 
     <h1 id="titulo">Sejam bem vindos ao meu site</h1>
 </header>
 
-<p>Nele, pretendo listar alguns games que eu joguei este ano e também algumas curiosidades minhas na aba sobre mim ali encima</p>
+<p id="texto">Nele, pretendo listar alguns fatos sobre mim e algumas coisas que eu aprendi neste curso
 
+    <br>
+
+Uma delas foi como colocar imagens em   
+</p>
+
+<main>
+ew
+<section></section>
+<section></section>
+
+
+</main>
 </body>
 </html>
