--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <header>
     <div id="menu"><ul>
-    <li><a href="#">home</a></li>
-    <li><a href="#">sobre mim</a></li>
-    <li><a href="#">objetivo</a></li>
-    </ul></div>
+            <li><a href="index.html">home</a></li>
+            <li><a href="pagina2.html">sobre mim</a></li>
+            <li><a href="pagina3.html">hobbies</a></li>
+        </ul></div>
 
     <h1 id="titulo">Sejam bem vindos ao meu site</h1>
 </header>
