--- a/index.html
+++ b/index.html
@@ -17,22 +17,25 @@
             <li><a href="pagina3.html">hobbies</a></li>
         </ul></div>
 
-    <h1 id="titulo">Sejam bem vindos ao meu site</h1>
+    <h1 id="titulo">SEJAM BEM VINDOS</h1>
 </header>
 
-<p id="texto">Nele, pretendo listar alguns fatos sobre mim e algumas coisas que eu aprendi neste curso
-
+<p id="texto">Nest site, pretendo mostrar algumas informaçoes sobre minham pessoa e alguma curiosidades que aprendi nas aulas de programação
     <br>
-
-Uma delas foi como colocar imagens em   
+    <br>
+ Uma delas foi essa aquikkkk:
 </p>
 
-<main>
-ew
-<section></section>
-<section></section>
+
+<div class="image-hover"></div>
+
+<br>
+<p id="texto">Outra coisa interessante que aprendemos na aula foi a utilização de bordas nos textos e imagens (igual esta que você está vendo aqui, mas elas podem mudar muito modificando as a sombra, padding. height. width, entre muitas outras formas de personalizar um site) Olhe um exemplo de uma border diferente:</p>
+<br>
+
+<p id="borderex">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+<hr>
 
 
-</main>
 </body>
 </html>
