--- a/pagina2.html
+++ b/pagina2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width='device-width', initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre Mim</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -12,12 +12,22 @@
 <header>
     <div id="menu"><ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="pagina2.html">sobre mim</a></li>
+        <li><a href="pagina2.html">SOBRE MIM</a></li>
         <li><a href="pagina3.html">hobbies</a></li>
         </ul></div>
 
     <h1 id="titulo">SOBRE MIM</h1>
 
+    <div class="sobremim">
+        <div id="txtimg">
+            <p id="texto">Meu nome é Breno Vaz Borges, tenho 19 anos e estudo Informática na escola técnica Etec Adolpho Berezin
+                <br><br>
+            Atualmente também faço inglês na escola de idiomas CNA, porém eu pulei 4 anos de curso por ter conhecimento prévio no idioma (aprendi sozinho). No final deste ano eu pretendo adquirir fluência no idioma, visto que o meu objetivo é sair do país
+                <br><br>
+            Algumas das coisas que eu mais gosto são games de variados gêneros e animais, tenho 5 deles em casakkkk, sendo 4 cachorros e 1 gato, parece um zoológico pra falar a verdade</p>
+        </div>
+   <img class="imgpfp" src="img/breno.jpg" alt="">
+    </div>
     
 
 
