--- a/pagina3.html
+++ b/pagina3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width='device-width', initial-scale=1.0">
-    <title>Document</title>
+    <title>Hobbies</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -12,12 +12,22 @@
     <div id="menu"><ul>
     <li><a href="index.html">home</a></li>
     <li><a href="pagina2.html">sobre mim</a></li>
-    <li><a href="pagina3.html">hobbies</a></li>
+    <li><a href="pagina3.html">HOBBIES</a></li>
     </ul></div>
 
     <h1 id="titulo">HOBBIES</h1>
 </header>
 
+<P id="texto"> Como eu contei antes, um dos meus hobbies é jogar video game, porém gosto de fazer outras coisas, dando alguns exemplos, sao: </P>
 
+<ol class="lista">
+    <li>Ler livros e mangás</li> <br>
+    <li>Assistir séries e animes</li> <br>
+    <li>Brincar com meus animais</li><br>
+    <li>Passar o tempo com minha mãe</li><br>
+    <li>conversar com meus amigos</li><br>
+    <li>entre outros...</li><br>
+
+</ol>
 </body>
 </html>
