--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header>
     <div id="menu"><ul>
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.html">HOME</a></li>
             <li><a href="pagina2.html">sobre mim</a></li>
             <li><a href="pagina3.html">hobbies</a></li>
         </ul></div>
